--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script src="app.js"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,20 +10,19 @@
 
 <body>
   <div id="nav-placeholder"></div>
-
   <div>
     <header>
       <h1>
         <br>
-        THIS IS MY HOME PAGE
+        THIS IS MY PROJECTS PAGE
       </h1>
     </header>
   </div>
   
   <script>
-  $(function(){
-    $("#nav-placeholder").load("nav.html");
-  });
+      $(function(){
+      $("#nav-placeholder").load("nav.html");
+      });
   </script>
 </body>
 </html>
