--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <div class="role flex-centered">
             software developer
           </div>
+          <div class="in-progress flex-centered">
+            (website in progress)
+          </div>
         </div>
       </div>
       <div class="bottom">
