--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <div class="inner-container">
       
       <!-- Temporary Menu -->
-      <div class="menu">
-        <div class="butt transition flex-centered first active">1</div>
-        <div class="butt transition flex-centered second">2</div>
-        <div class="butt transition flex-centered third">3</div>
-        <div class="butt transition flex-centered fourth">4</div>
+      <!-- <div class="menu">
+        <div class="butt transition flex-centered active">1</div>
+        <div class="butt transition flex-centered">2</div>
+        <div class="butt transition flex-centered">3</div>
+        <div class="butt transition flex-centered">4</div>
+        <div class="butt transition flex-centered">5</div>
       </div>
-      <div id="display" class="menu flex-centered transition alive"></div>
+      <div id="display" class="menu flex-centered transition alive"></div> -->
 
       <!-- Overlay bars -->
       <div class="top-bar overlay"></div>
@@ -34,9 +35,10 @@
       <!-- TOP -->
       <div class="top">
         <div id="links-container">
-          <a href="https://www.linkedin.com/in/evan-lim-611445227/" target="_blank"><img src="images/linkedin.png" class="link transition"></a>
-          <a href="https://github.com/evanmatlim" target="_blank"><img src="images/githubtransparent.png" class="link transition"></a>
-          <a href="https://drive.google.com/file/d/1wP1UFh8xWUhpolYC9H-YdK6vOgV_wVEW/view?usp=sharing" target="_blank"><img src="images/whiteresumepng.png" class="link transition"></a>
+          <a href="https://www.linkedin.com/in/evan-lim-611445227/" target="_blank" class="link-icon flex-centered"><img src="images/linkedin.png" class="link transition"></a>
+          <a href="https://github.com/evanmatlim" target="_blank" class="link-icon flex-centered"><img src="images/githubtransparent.png" class="link transition"></a>
+          <a href="https://drive.google.com/file/d/1wP1UFh8xWUhpolYC9H-YdK6vOgV_wVEW/view?usp=sharing" target="_blank" class="link-icon flex-centered"><img src="images/whiteresumepng.png" class="link transition"></a>
+          <a href = "mailto: evan.lim@berkeley.edu.com" class="link-icon flex-centered"><img src="images/email.png" id="mail" class="link transition"></a>
         </div>
       </div>
 
@@ -47,8 +49,8 @@
             Evan Lim
           </div>
           <div class="role-container flex-centered">
-          <div class="role replace flex-centered during"></div>
-          <div class="role replace flex-centered pre"></div>
+          <div class="role rise flex-centered during"></div>
+          <div class="role rise flex-centered pre"></div>
           </div>
           <!-- <div class="in-progress flex-centered">
             (website in progress)
