--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <div class="role rise flex-centered during"></div>
           <div class="role rise flex-centered pre"></div>
           </div>
-          <!-- <div class="in-progress flex-centered">
-            (website in progress)
-          </div> -->
+          <div class="in-progress flex-centered">
+            (website in construction)
+          </div>
         </div>
       </div>
 
