--- a/desinv.html
+++ b/desinv.html
@@ -2,60 +2,10 @@
 <html lang="en">
 
 <head>
-  <title>Des Inv 10</title>
-  <link rel="stylesheet" href="desinv/style.css">
-  <link href='https://fonts.googleapis.com/css?family=Waterfall' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <title>Des Inv 10 (Outdated)</title>
+  <meta http-equiv="refresh" content="0; URL=https://evanmatlim.github.io/desinv/index.html" />
 </head>
 
 <body>
-    <div id="landing">
-        <div class="background-image">
-            <!-- <img src="desinv/gradient2.jpeg" class="monstera"> -->
-            <!-- <div class="background"></div> -->
-        </div>
-        <div class="team-members">
-            <div class="member">
-                <div class="photo-holder"><img src="desinv/evan.png" class="photo"></div>
-                <div class="name">Evan Lim</div>
-            </div>
-            <div class="member">
-                <div class="photo-holder"><img src="desinv/seungyeon.png" class="photo"></div>
-                <div class="name">Seungyeon Kim</div>
-            </div>
-            <div class="member">
-                <div class="photo-holder"><img src="desinv/maria.png" class="photo"></div>
-                <div class="name">Maria Estrada</div>
-            </div>
-            <div class="member">
-                <div class="photo-holder"><img src="desinv/liam.png" class="photo"></div>
-                <div class="name">Liam Johnson</div>
-            </div>
-        </div>
-    </div>
-    <div id="collaborative" class="asset">
-        <img src="desinv/collaborative.png" class="asset-img">
-    </div>
-    <div class="margin"></div>
-    <div id="creative-matrix" class="asset">
-        <img src="desinv/matrix.png" class="asset-img">
-    </div>
-    <div id="importance-difficulty" class="asset">
-        <img src="desinv/importancedifficulty.png" class="asset-img">
-    </div>
-    <div id="concept-poster" class="asset">
-        <img src="desinv/conceptposter.png" class="asset-img">
-    </div>
-    <div id="moodboard" class="asset">
-        <img src="desinv/teammoodboard.png" class="asset-img">
-    </div>
-    <div id="logo" class="asset">
-        <img src="desinv/logodescription-replace.png" class="asset-img">
-    </div>
 </body>
-<!-- <script type="text/javascript" src="desinv/app.js"></script> -->
 </html>
