--- a/desinv/index.html
+++ b/desinv/index.html
@@ -195,28 +195,28 @@
             <div class="card">
                 <div class="picture-container"><img src="assets/img/maria.png" class="picture"></div>
                 <div class="card-background">
-                    <div class="name flex-centered">Maria Estrada</div>
+                    <div class="name">Maria Estrada</div>
                     <div class="description">Mechanical Engineering<br>3rd Year</div>
                 </div>
             </div>
             <div class="card">
                 <div class="picture-container"><img src="assets/img/liam.png" class="picture"></div>
                 <div class="card-background">
-                    <div class="name flex-centered">Liam Johnson</div>
+                    <div class="name">Liam Johnson</div>
                     <div class="description">Mechanical Engineering<br>1st Year</div>
                 </div>
             </div>
             <div class="card">
                 <div class="picture-container"><img src="assets/img/seungyeon.png" class="picture"></div>
                 <div class="card-background">
-                    <div class="name flex-centered">Seungyeon Kim</div>
+                    <div class="name">Seungyeon Kim</div>
                     <div class="description">Cognitive Science<br>3rd Year</div>
                 </div>
             </div>
             <div class="card">
                 <div class="picture-container"><img src="assets/img/evan.png" class="picture"></div>
                 <div class="card-background">
-                    <div class="name flex-centered">Evan Lim</div>
+                    <div class="name">Evan Lim</div>
                     <div class="description">Computer Science<br>4th Year</div>
                 </div>
             </div>
