--- a/desinv/index.html
+++ b/desinv/index.html
@@ -93,7 +93,7 @@
                             <div class="design-component-title">Importance-Difficulty Matrix</div>
                             <div id="importance" class="design-component clickable-component">
                                 <div class="design-overlay"></div>
-                                <img src="assets/design/importancedifficulty.png" class="design-preview">
+                                <img src="assets/design/importancedifficulty.png" class="design-preview height">
                             </div>
                             <div class="design-component-title">Moodboard</div>
                             <div id="moodboard" class="design-component clickable-component">
