--- a/desinv/index.html
+++ b/desinv/index.html
@@ -93,7 +93,7 @@
                             <div class="design-component-title">Importance-Difficulty Matrix</div>
                             <div id="importance" class="design-component clickable-component">
                                 <div class="design-overlay"></div>
-                                <img src="assets/design/importancedifficulty.png" class="design-preview height">
+                                <img src="assets/design/importancedifficulty.png" class="design-preview">
                             </div>
                             <div class="design-component-title">Moodboard</div>
                             <div id="moodboard" class="design-component clickable-component">
@@ -155,69 +155,40 @@
                 <div id="right-arrow" class="arrow on">&gt;</div>
             </div>
         </div>
-        <!-- <div class="design-columns">
-            <div class="design-column">
-                <div id="team-collaboration" class="design-component clickable-component">
-                    <div class="design-overlay"></div>
-                    <img src="assets/design/collaborative.svg" class="collaborative">
-                </div>
-                <div id="final-matrix" class="design-component">
-
-                </div>
-                <div id="storyboard" class="design-component">
-
-                </div>
-            </div>
-            <div class="design-column">
-                <div id="importance-matrix" class="design-component">
-
-                </div>
-                <div id="concept-poster" class="design-component">
-
-                </div>
-            </div>
-            <div class="design-column">
-                <div id="product-sketches" class="design-component">
-
-                </div>
-                <div id="moodboard" class="design-component">
-
-                </div>
-                <div id="logo-rationale" class="design-component">
-
-                </div>
-            </div>
-        </div> -->
     </div>
     <div id="team-container" class="content-container hidden">
-        <div class="navbar-filler"></div>
+        <div class="navbar-fillers"></div>
         <div class="cards-container">
-            <div class="card">
-                <div class="picture-container"><img src="assets/img/maria.png" class="picture"></div>
-                <div class="card-background">
-                    <div class="name">Maria Estrada</div>
-                    <div class="description">Mechanical Engineering<br>3rd Year</div>
+            <div class="cards-row">
+                <div class="card">
+                    <div class="picture-container"><img src="assets/img/maria.png" class="picture"></div>
+                    <div class="card-background">
+                        <div class="name">Maria Estrada</div>
+                        <div class="description">Mechanical Engineering<br>3rd Year</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="picture-container"><img src="assets/img/liam.png" class="picture"></div>
+                    <div class="card-background">
+                        <div class="name">Liam Johnson</div>
+                        <div class="description">Mechanical Engineering<br>1st Year</div>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="picture-container"><img src="assets/img/liam.png" class="picture"></div>
-                <div class="card-background">
-                    <div class="name">Liam Johnson</div>
-                    <div class="description">Mechanical Engineering<br>1st Year</div>
+            <div class="cards-row">
+                <div class="card">
+                    <div class="picture-container"><img src="assets/img/seungyeon.png" class="picture"></div>
+                    <div class="card-background">
+                        <div class="name">Seungyeon Kim</div>
+                        <div class="description">Cognitive Science<br>3rd Year</div>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="picture-container"><img src="assets/img/seungyeon.png" class="picture"></div>
-                <div class="card-background">
-                    <div class="name">Seungyeon Kim</div>
-                    <div class="description">Cognitive Science<br>3rd Year</div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="picture-container"><img src="assets/img/evan.png" class="picture"></div>
-                <div class="card-background">
-                    <div class="name">Evan Lim</div>
-                    <div class="description">Computer Science<br>4th Year</div>
+                <div class="card">
+                    <div class="picture-container"><img src="assets/img/evan.png" class="picture"></div>
+                    <div class="card-background">
+                        <div class="name">Evan Lim</div>
+                        <div class="description">Computer Science<br>4th Year</div>
+                    </div>
                 </div>
             </div>
         </div>
